// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse could override default openMotion 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left osui-collapse"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="icon-wrapper ant-collapse-arrow"
      >
        <svg
          class="osui-icon "
          focusable="false"
          height="1024"
          viewBox="0 0 1024 1024"
          width="1024"
        >
          <path
            d="M798.255 256L512 563.2 225.745 256 128 358.4 512 768l384-409.6z"
            fill="currentColor"
          />
        </svg>
         
      </span>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should render extra node of panel 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left osui-collapse"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="icon-wrapper ant-collapse-arrow"
      >
        <svg
          class="osui-icon "
          focusable="false"
          height="1024"
          viewBox="0 0 1024 1024"
          width="1024"
        >
          <path
            d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
            fill="currentColor"
          />
        </svg>
      </span>
      header
      <div
        class="ant-collapse-extra"
      >
        <button
          type="button"
        >
          action
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <span
        class="icon-wrapper ant-collapse-arrow"
      >
        <svg
          class="osui-icon "
          focusable="false"
          height="1024"
          viewBox="0 0 1024 1024"
          width="1024"
        >
          <path
            d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
            fill="currentColor"
          />
        </svg>
      </span>
      header
      <div
        class="ant-collapse-extra"
      >
        <button
          type="button"
        >
          action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse should support remove expandIcon 1`] = `
<div
  class="ant-collapse ant-collapse-icon-position-left osui-collapse"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      header
    </div>
  </div>
</div>
`;
